k8s/homeassistant/homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production-homeassistant
  namespace: home
  labels: 
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: homeassistant/home-assistant:0.112.5
        ports:
        - containerPort: 8123
        readinessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 15
          periodSeconds: 5
        volumeMounts:
        - mountPath: /config
          name: homeassistant
      volumes:
      - name: homeassistant
        persistentVolumeClaim:
          claimName: homeassistant
