k8s/homeassistant/homeassistant-mdns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mdns-repeater
  namespace: home
  labels:
    app: mdns-repeater
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mdns-repeater
  template:
    metadata:
      labels:
        app: mdns-repeater
    spec:
      hostNetwork: true
      containers:
      - name: mdns-repeater
        image: angelnu/mdns_repeater:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Mi"
            cpu: "5m"
          limits:
            #memory: "128Mi"
            #cpu: "500m"
