k8s/homeassistant/homeassistant-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
  - port: 8123
    protocol: TCP
    targetPort: 8123
  externalIPs:
    - 192.168.1.2
  selector:
    app: homeassistant
  type: ClusterIP
